# llm-council-pro

./: .gitignore  HISTORY.md  LICENSE  README.md  pyproject.toml
backend/: auth.py  council.py  debate.py  highlights.py  json_utils.py  main.py  middleware.py  models.py  ollama_client.py  presets.py  prompts.py  rankings.py  ratings.py  search.py  settings.py  storage.py  truth_check.py  usage.py
backend/export/: __init__.py  content_processing.py  docx_export.py  markdown.py  pdf.py  table_parser.py
backend/providers/: anthropic.py  base.py  custom_openai.py  deepseek.py  glm.py  google.py  groq.py  kimi.py  mistral.py  ollama.py  openai.py  openrouter.py  perplexity.py
docs/guides/: spa-guide.md
docs/plans/: abr-llm-council-deployment-plan.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  api.js  index.css
frontend/src/components/: ChatInterface.css  ChatInterface.jsx  CopyButton.css  CopyButton.jsx  CouncilGrid.css  CouncilGrid.jsx  DebateGateway.css  DebateGateway.jsx  ExecutionModeToggle.jsx  LoginScreen.css  LoginScreen.jsx  RatingWidget.css  RatingWidget.jsx  RoleSelector.css  RoleSelector.jsx  SearchContext.css  SearchContext.jsx  SearchableModelSelect.jsx  Settings.css  Settings.jsx  Sidebar.css  Sidebar.jsx  Stage1.css  Stage1.jsx  Stage2.css  Stage2.jsx  Stage3.css  Stage3.jsx  Stage4.css  Stage4.jsx  Stage5.css  Stage5.jsx  ThinkBlockRenderer.jsx
frontend/src/components/settings/: CouncilConfig.jsx  (+6 more)
frontend/src/utils/: modelHelpers.js
presets/: COUNCIL-PRESETS-1.json  COUNCIL-PRESETS-2.json
