[project]
name = "llm-council-plus"
version = "0.1.0"
description = "LLM Council Plus - Your Advanced AI Council"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "ddgs>=8.0.0",
    "yake>=0.4.8",
    "reportlab>=4.0.0",
    "python-docx>=1.1.0",
    "jinja2>=3.0.0",
    "markdown>=3.5.0",
    "beautifulsoup4>=4.12.0",
    "PyJWT>=2.8.0",
]
